--- a/app/src/main/res/layout/fragment_site_chat.xml
+++ b/app/src/main/res/layout/fragment_site_chat.xml
@@ -14,6 +14,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/chatMessageLayout"
+        android:visibility="invisible"/>
+
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toTopOf="@id/chatMessageLayout"/>
 
     <LinearLayout
@@ -23,7 +33,8 @@
         app:layout_constraintTop_toBottomOf="@id/chatRoomWebView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingTop="8dp">
 
         <EditText
             android:id="@+id/chatMessage"
@@ -32,7 +43,9 @@
             android:layout_weight="1"
             android:hint="Enter a message..."
             android:inputType="textCapSentences"
-            android:enabled="false"/>
+            android:enabled="false"
+            android:paddingTop="8dp"
+            android:layout_marginLeft="8dp"/>
 
         <ImageButton
             android:id="@+id/sendMessageButton"
