--- a/app/src/main/res/layout/tree_node_file.xml
+++ b/app/src/main/res/layout/tree_node_file.xml
@@ -5,14 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="5dp"
+    android:background="@color/leaf_background"
     android:foreground="?android:attr/selectableItemBackground" >
 
     <TextView
-        android:textColor="@color/sakai_light_black"
-        android:textSize="16sp"
-        android:text="File Name"
         android:id="@+id/resource_file_txt"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="File Name"
+        android:textSize="16sp"
+        android:textColor="@color/leaf_text"
+        android:paddingBottom="8dp"
+        android:paddingRight="8dp"
+        android:paddingTop="8dp" />
 
 </LinearLayout>
