--- a/app/src/main/res/layout/tree_node_resource_dir.xml
+++ b/app/src/main/res/layout/tree_node_resource_dir.xml
@@ -6,17 +6,20 @@
     android:layout_height="wrap_content"
     android:foreground="?android:attr/selectableItemBackground"
     android:orientation="horizontal"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/sakai_medium_red"
     android:padding="5dp">
 
     <TextView
-        android:textStyle="bold"
         android:id="@+id/resource_dir_txt"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         tools:text="Directory Name"
+        android:textStyle="bold"
         android:textColor="@color/sakai_medium_silver"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:paddingBottom="8dp"
+        android:paddingRight="8dp"
+        android:paddingTop="8dp" />
 
 </LinearLayout>
