--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -36,6 +36,12 @@
         <item name="android:paddingRight">24dp</item>
     </style>
 
+    <style name="FontawesomeText.Resource" parent="FontawesomeText">
+        <item name="android:textColor">@color/sakai_light_silver</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:paddingRight">8dp</item>
+    </style>
+
     <style name="autoscroll">
         <item name="android:singleLine">true</item>
         <item name="android:ellipsize">marquee</item>
