--- a/app/src/main/res/drawable-v24/nav_item_selector.xml
+++ b/app/src/main/res/drawable-v24/nav_item_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/white" android:state_checked="true" />
-    <item android:color="@color/sakai_light_black" />
+    <item android:color="@color/tabBarTintColor" android:state_checked="true" />
+    <item android:color="@color/tabBarUnselectedTintColor" />
 </selector>
