--- a/app/src/main/res/layout/refreshable_treeview_fragment.xml
+++ b/app/src/main/res/layout/refreshable_treeview_fragment.xml
@@ -11,7 +11,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="0.0"
+        android:background="@color/primaryBackgroundColor">
     </FrameLayout>
 
     <ProgressBar
