--- a/app/src/main/res/layout/tree_node_term_header.xml
+++ b/app/src/main/res/layout/tree_node_term_header.xml
@@ -4,7 +4,7 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/sakai_medium_red"
+    android:background="@drawable/tree_node_term_background"
     android:foreground="?android:attr/selectableItemBackground" >
 
     <TextView
@@ -16,7 +16,7 @@
         android:padding="8dp"
         android:paddingLeft="16dp"
         android:layout_weight="1"
-        android:textColor="@color/sakai_medium_silver"
+        android:textColor="@color/primaryTextColor"
         android:textSize="24sp" />
 
     <TextView
