--- a/app/src/main/res/menu/grades_fragment_menu.xml
+++ b/app/src/main/res/menu/grades_fragment_menu.xml
@@ -6,7 +6,8 @@
         android:title="Refresh"
         android:id="@+id/action_refresh"
         android:icon="@drawable/ic_refresh_black_24dp"
-        app:showAsAction="always">
+        app:showAsAction="always"
+        app:iconTint="@color/navigationTintColor">
 
     </item>
 </menu>
