--- a/app/src/main/res/menu/refresh_menu.xml
+++ b/app/src/main/res/menu/refresh_menu.xml
@@ -7,7 +7,8 @@
         android:id="@+id/action_refresh"
         android:visible="true"
         android:icon="@drawable/ic_refresh_black_24dp"
-        app:showAsAction="always">
+        app:showAsAction="always"
+        app:iconTint="@color/navigationTintColor">
 
     </item>
 
