--- a/app/src/main/res/layout/card_announcements.xml
+++ b/app/src/main/res/layout/card_announcements.xml
@@ -34,7 +34,7 @@
 
             <TextView
                 android:id="@+id/author_name"
-                style="@style/autoscroll"
+                style="@style/cutoff"
                 android:layout_width="0dp"
                 android:layout_height="30dp"
                 android:layout_weight="1"
@@ -62,7 +62,7 @@
             >
 
             <TextView
-                style="@style/autoscroll"
+                style="@style/cutoff"
                 android:id="@+id/course_name"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -83,7 +83,7 @@
             >
 
             <TextView
-                style="@style/autoscroll"
+                style="@style/cutoff"
                 android:id="@+id/title_txt"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
