--- a/app/src/main/res/drawable/tree_node_assignment_card_background.xml
+++ b/app/src/main/res/drawable/tree_node_assignment_card_background.xml
@@ -1,18 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:top="2px">
+    <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/highlightColor" />
         </shape>
     </item>
-    <item android:left="5dp">
+    <item android:top="2dp" android:bottom="2dp" >
         <shape android:shape="rectangle">
-            <solid android:color="@color/borderColor" />
-        </shape>
-    </item>
-    <item android:top="1px" android:left="4dp" >
-        <shape android:shape="rectangle">
-            <solid android:color="@color/primaryBackgroundColor" />
+            <solid android:color="@color/tertiaryBackgroundColor" />
         </shape>
     </item>
 </layer-list>
