--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColorLink">@color/linkColor</item>
         <item name="android:fontFamily">@font/lato</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
     </style>
@@ -19,12 +20,12 @@
 
 
     <style name="FontawesomeText" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="android:textColor">@color/primaryTextColor</item>
         <item name="android:fontFamily">@font/fontawesome</item>
         <item name="android:paddingTop">4dp</item>
     </style>
 
     <style name="FontawesomeText.Term" parent="FontawesomeText">
-        <item name="android:textColor">@color/primaryTextColor</item>
         <item name="android:textSize">24sp</item>
         <item name="android:paddingTop">8dp</item>
         <item name="android:paddingRight">12dp</item>
