--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sakaimobile.development.sakaiclient20.ui.activities.MainActivity">
+    tools:context="com.sakaimobile.development.sakaiclient20.ui.activities.MainActivity"
+    android:background="@color/primaryBackgroundColor">
 
 
     <android.support.v7.widget.Toolbar
