--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -22,8 +22,9 @@
         app:layout_constraintTop_toBottomOf="@id/preferences_fragment"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:padding="20dp"
         android:textColor="@color/sakai_light_silver"
         android:textStyle="bold"/>
 
