--- a/app/src/main/res/layout/fragment_site_chat.xml
+++ b/app/src/main/res/layout/fragment_site_chat.xml
@@ -34,25 +34,35 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:paddingTop="8dp">
+        android:paddingTop="12dp"
+        android:background="@color/tabBarBackgroundColor"
+        android:paddingBottom="12dp">
 
         <EditText
             android:id="@+id/chatMessage"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="Enter a message..."
             android:inputType="textCapSentences"
             android:enabled="false"
-            android:paddingTop="8dp"
-            android:layout_marginLeft="8dp"/>
+            android:padding="8dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:textColor="@color/primaryTextColor"
+            android:textColorHint="@color/secondaryTextColor"
+            android:background="@color/secondaryBackgroundColor"
+            tools:text="Here is a short message..."/>
 
         <ImageButton
             android:id="@+id/sendMessageButton"
             app:srcCompat="@drawable/ic_send_black_24dp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="Send message"/>
+            android:layout_height="match_parent"
+            android:layout_marginRight="16dp"
+            android:contentDescription="Send message"
+            android:background="@android:color/transparent"
+            android:tint="@color/highlightColor"/>
 
     </LinearLayout>
 
