--- a/app/src/main/res/layout/fragment_single_assignment.xml
+++ b/app/src/main/res/layout/fragment_single_assignment.xml
@@ -12,7 +12,8 @@
         app:cardCornerRadius="4dp"
         app:cardPreventCornerOverlap="true"
         app:cardUseCompatPadding="true"
-        app:cardElevation="8dp" >
+        app:cardElevation="8dp"
+        android:padding="-8dp">
 
         <RelativeLayout
             android:orientation="vertical"
