--- a/app/src/main/res/layout/fragment_site_resources.xml
+++ b/app/src/main/res/layout/fragment_site_resources.xml
@@ -2,7 +2,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/primaryBackgroundColor">
 
 
     <FrameLayout
