--- a/app/src/main/res/layout/grade_item.xml
+++ b/app/src/main/res/layout/grade_item.xml
@@ -18,8 +18,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:padding="12dp"
-        tools:text="assignment"
+        android:paddingTop="12dp"
+        android:paddingBottom="24dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="12dp"
+        tools:text="Programming Assignment 1: Introduction to C"
         android:textColor="@color/primaryTextColor"
         android:textSize="16sp" />
 
