--- a/app/src/main/res/layout/tree_node_resource_file.xml
+++ b/app/src/main/res/layout/tree_node_resource_file.xml
@@ -4,19 +4,33 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="5dp"
     android:background="@drawable/tree_node_resource_background"
     android:foreground="?android:attr/selectableItemBackground" >
 
+   <FrameLayout
+       android:id="@+id/stepper_container"
+       android:layout_width="wrap_content"
+       android:layout_height="match_parent" />
+
     <TextView
         android:id="@+id/resource_file_txt"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:text="File Name"
         android:textSize="16sp"
         android:textColor="@color/secondaryTextColor"
-        android:paddingBottom="8dp"
+        android:paddingBottom="12dp"
         android:paddingRight="8dp"
-        android:paddingTop="8dp" />
+        android:paddingTop="12dp" />
+
+    <TextView
+        android:id="@+id/download_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/secondaryTextColor"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        style="@style/FontawesomeText.Resource" />
 
 </LinearLayout>
