--- a/app/src/main/res/layout/activity_site_page.xml
+++ b/app/src/main/res/layout/activity_site_page.xml
@@ -25,7 +25,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:layout_constraintVertical_bias="0.0">
+        app:layout_constraintVertical_bias="0.0"
+        android:background="@color/primaryBackgroundColor">
 
     </FrameLayout>
 
