--- a/app/src/main/res/layout/fragment_full_announcement.xml
+++ b/app/src/main/res/layout/fragment_full_announcement.xml
@@ -11,11 +11,11 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="15dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
-        android:layout_marginTop="15dp"
-        app:cardCornerRadius="15dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="16dp"
+        app:cardCornerRadius="4dp"
         app:cardElevation="20dp">
 
         <!-- holds the three sections, header, body, footer-->
@@ -23,114 +23,126 @@
             android:id="@+id/outer_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
-
+            android:orientation="vertical"
+            android:background="@color/tertiaryBackgroundColor">
 
             <!--header-->
             <LinearLayout
                 android:id="@+id/header_container"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="2"
-                android:background="@color/colorPrimaryDark"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp"
-                android:paddingTop="15dp">
+                android:paddingBottom="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="24dp">
 
                 <TextView
-                    android:maxLines="1"
+                    android:maxLines="2"
                     android:focusableInTouchMode="true"
                     android:id="@+id/announcement_title"
                     android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="2"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:layout_marginRight="32dp"
                     tools:text="New Announcement!"
-                    android:textColor="@color/white"
-                    android:textSize="20sp"
-                    android:textStyle="bold"
-                    android:scrollbars="horizontal"/>
-
+                    android:textColor="@color/primaryTextColor"
+                    android:textSize="18sp"
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:maxLines="1"
                     android:id="@+id/course_name"
                     android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1.5"
+                    android:layout_height="wrap_content"
                     tools:text="Intro to College 101"
-                    android:textColor="@color/white"
-                    android:textSize="15sp"
-                    android:scrollbars="horizontal"/>
+                    android:textColor="@color/secondaryTextColor"
+                    android:textSize="12sp"/>
 
                 <TextView
                     android:maxLines="1"
                     android:id="@+id/author_name"
                     android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1.5"
+                    android:layout_height="wrap_content"
                     tools:text="Professor John Doe"
-                    android:textColor="@color/white"
-                    android:textSize="12sp"
-                    android:scrollbars="horizontal"/>
-
-
-
+                    android:textColor="@color/secondaryTextColor"
+                    android:textSize="12sp"/>
 
             </LinearLayout>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/highlightColor"/>
+
             <!-- body-->
-            <LinearLayout
+            <ScrollView
                 android:id="@+id/body_container"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="7"
-                android:background="@color/white"
-                android:paddingLeft="15dp"
-                android:paddingBottom="10dp"
-                android:paddingRight="15dp"
-                android:paddingTop="10dp"
-                >
+                android:scrollbarThumbVertical="@color/highlightColor"
+                android:scrollbarSize="4dp">
 
-                <ScrollView
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="16dp"
+                    android:paddingRight="16dp"
+                    android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/announcement_content"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque mollis, lectus id dictum blandit, elit elit auctor metus, in ultrices velit justo in odio. Maecenas metus nibh, elementum quis orci sit amet, sodales tincidunt est. Nam mollis aliquet lorem ac sodales. Pellentesque posuere convallis tellus, vitae dignissim felis fermentum sit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque mollis, lectus id dictum blandit, elit elit auctor metus, in ultrices velit justo in odio. Maecenas metus nibh, elementum quis orci sit amet, sodales tincidunt est. Nam mollis aliquet lorem ac sodales. Pellentesque posuere convallis tellus, vitae dignissim felis fermentum sit."
-                        android:textSize="15sp" />
+                        android:layout_height="wrap_content"
+                        android:paddingBottom="12dp"
+                        android:paddingTop="12dp"
+                        android:textSize="12sp"
+                        android:textColor="@color/secondaryTextColor"
+                        tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque mollis, lectus id dictum blandit, elit elit auctor metus, in ultrices velit justo in odio. Maecenas metus nibh, elementum quis orci sit amet, sodales tincidunt est. Nam mollis aliquet lorem ac sodales. Pellentesque posuere convallis tellus, vitae dignissim felis fermentum sit.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque mollis, lectus id dictum blandit, elit elit auctor metus, in ultrices velit justo in odio. Maecenas metus nibh, elementum quis orci sit amet, sodales tincidunt est. Nam mollis aliquet lorem ac sodales. Pellentesque posuere convallis tellus, vitae dignissim felis fermentum sit." />
 
-                </ScrollView>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="16dp"
+                        android:text="Attachments"
+                        android:textSize="18sp"
+                        android:textStyle="bold"
+                        android:textColor="@color/primaryTextColor"/>
 
+                    <TextView
+                        android:id="@+id/announcement_attachments"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:textSize="12sp"
+                        android:textColor="@color/secondaryTextColor"/>
 
+                </LinearLayout>
+            </ScrollView>
 
-
-            </LinearLayout>
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/highlightColor"/>
 
             <!--footer-->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:background="@color/colorPrimaryDark"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp">
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp">
 
                 <TextView
                     android:id="@+id/date_text"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center_horizontal|center_vertical"
+                    android:gravity="center_vertical"
                     tools:text="September 3rd, 2021"
-                    android:textColor="@color/white"
+                    android:textColor="@color/primaryTextColor"
                     android:textSize="15sp" />
-
             </LinearLayout>
-
 
         </LinearLayout>
 
