Eliminated TransactionTooLarge exception from annc, minor styling

--- a/app/src/main/res/layout/fragment_announcements.xml
+++ b/app/src/main/res/layout/fragment_announcements.xml
@@ -28,26 +28,25 @@
     </android.support.v7.widget.RecyclerView>
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/scrollUpButton"
+        android:id="@+id/scroll_up_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginRight="12dp"
+        android:layout_marginBottom="12dp"
         android:clickable="true"
-        android:focusable="auto"
+        android:focusable="true"
         android:visibility="gone"
-        app:backgroundTint="@color/colorPrimary2"
+        app:backgroundTint="@color/highlightColor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/ic_keyboard_arrow_up_black_24dp" />
+        app:srcCompat="@drawable/ic_keyboard_arrow_up_black_24dp"
+        app:fabSize="mini"
+        android:scaleType="center"/>
 
 
 </android.support.constraint.ConstraintLayout>
