Preventing memory leaks in announcements fragment

--- a/app/src/main/res/layout/tree_node_grade.xml
+++ b/app/src/main/res/layout/tree_node_grade.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:paddingLeft="8dp"
+        android:paddingRight="8dp"
         tools:text="assignment"
         android:textColor="@color/primaryTextColor"
         android:textSize="16sp" />
