--- a/app/src/main/res/layout/appinfo_item.xml
+++ b/app/src/main/res/layout/appinfo_item.xml
@@ -3,9 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/leaf_background"
     android:orientation="horizontal"
-    android:padding="10dp">
+    android:foreground="?android:attr/selectableItemBackground"
+    android:padding="15dp"
+    >
 
     <TextView
         android:id="@+id/info_icon"
@@ -24,7 +25,6 @@
         android:id="@+id/info_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="8dp"
         tools:text="INFO ITEM INFO ITEM INFO ITEM INFO ITEM"
         android:textColor="@color/sakai_light_black"
         android:textSize="16sp" />
