--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -72,7 +72,10 @@
 
 
         <LinearLayout
-            android:background="@color/white"
+            android:paddingLeft="10dp"
+            android:paddingStart="10dp"
+            android:paddingRight="0dp"
+            android:paddingEnd="0dp"
             android:id="@+id/appinfo_linearlayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
