--- a/app/src/main/res/layout/appinfo_item.xml
+++ b/app/src/main/res/layout/appinfo_item.xml
@@ -23,10 +23,18 @@
 
     <TextView
         android:id="@+id/info_txt"
-        android:layout_width="wrap_content"
+        android:layout_weight="1"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        tools:text="INFO ITEM INFO ITEM INFO ITEM INFO ITEM"
+        tools:text="INFO ITEM INFO ITEM"
         android:textColor="@color/sakai_light_black"
         android:textSize="16sp" />
+
+    <TextView
+        style="@style/FontawesomeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:text="\uf105" />
 
 </LinearLayout>
