refactored to use generic onClickAppInfoItem method which does the correct action (simpler to understand)

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -92,7 +92,7 @@
                 layout="@layout/appinfo_item" />
 
             <include
-                android:id="@+id/shoutouts_item"
+                android:id="@+id/credits_item"
                 layout="@layout/appinfo_item" />
 
             <include
