added logo credits text box

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -3,6 +3,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/settingsScrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragments.SettingsFragment">
@@ -39,8 +40,8 @@
             android:id="@+id/app_icon"
             android:layout_width="70dp"
             android:layout_height="69dp"
-            android:layout_marginStart="88dp"
-            android:layout_marginLeft="88dp"
+            android:layout_marginStart="80dp"
+            android:layout_marginLeft="80dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
             android:contentDescription="@string/app_name"
@@ -51,11 +52,11 @@
             app:layout_constraintVertical_bias="0.039" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/appVersionTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:layout_marginLeft="36dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
@@ -65,23 +66,40 @@
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.023"
             app:layout_constraintStart_toEndOf="@+id/app_icon"
             app:layout_constraintTop_toBottomOf="@+id/preferences_fragment"
-            app:layout_constraintVertical_bias="0.082" />
+            app:layout_constraintVertical_bias="0.085" />
 
+
+        <TextView
+            android:id="@+id/logoCreditsTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:text="@string/logo_made_with"
+            android:textColor="@color/sakai_light_black"
+            android:textSize="15sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/app_icon"
+            app:layout_constraintVertical_bias="0.041" />
 
         <LinearLayout
-            android:paddingLeft="10dp"
-            android:paddingStart="10dp"
-            android:paddingRight="0dp"
-            android:paddingEnd="0dp"
             android:id="@+id/appinfo_linearlayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:orientation="vertical"
-            app:layout_constraintTop_toBottomOf="@id/app_icon">
+            android:paddingStart="10dp"
+            android:paddingLeft="10dp"
+            android:paddingEnd="0dp"
+            android:paddingRight="0dp"
+            app:layout_constraintTop_toBottomOf="@id/logoCreditsTxt">
 
             <include
                 android:id="@+id/about_item"
