--- a/app/src/main/res/layout/tree_node_course_recycler_view.xml
+++ b/app/src/main/res/layout/tree_node_course_recycler_view.xml
@@ -44,8 +44,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/assignments_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-
-    </android.support.v7.widget.RecyclerView>
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
